small changes to .md files

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: fimuko 
+title: log 
 description: adventures in data science / data enginireeing world
 show_downloads: true
 
-baseurl: "/" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
+baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
 url: "https://fimuko.github.io" # change this to the base hostname & protocol for your site
 
 
