--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ theme: # leave it empty
 author: fimuko
 image: /thumbnail-jumbo.png
 # twitter:
-#   username: lorepirri
+#   username: 
 
 plugins:
   - jekyll-target-blank
@@ -27,4 +27,4 @@ plugins:
 target-blank:
     rel: nofollow
 
-header_page_refs: ['now', 'about', 'contact']
+header_page_refs: ['about', 'now', 'contact']
