--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "[:.:]" (~_^) ლ(´ڡ`ლ) (¬_¬) ب_ب
+title: (~_^) ლ(´ڡ`ლ) (¬_¬) ب_ب
 description: massaging and squeezing data, and having fun
 show_downloads: true
 
