--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: (~_^) ლ(´ڡ`ლ) (¬_¬) ب_ب
-description: massaging and squeezing data, and having fun
+title: (ت)
+description: squeezing data and having fun
 show_downloads: true
 
 baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
