--- a/_config.yml
+++ b/_config.yml
@@ -27,4 +27,4 @@ plugins:
 target-blank:
     rel: nofollow
 
-header_page_refs: ['about', 'now', 'contact']
+header_page_refs: ['about', 'now', 'contact', 'blog']
