--- a/config.yml
+++ b/config.yml
@@ -8,8 +8,8 @@ enableRobotsTXT: true
 buildDrafts: false
 buildFuture: false
 buildExpired: false
-
-googleAnalytics: UA-123-45
+enableEmoji: true
+#googleAnalytics: UA-123-45
 
 minify:
   disableXML: true
@@ -115,11 +115,12 @@ params:
     threshold: 0.4
     minMatchCharLength: 0
     keys: ["title", "permalink", "summary", "content"]
-  outputs:
-    home:
-      - HTML
-      - RSS
-      - JSON # is necessary
+  
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON
 menu:
   main:
     - identifier: about
